fix: update foreground color in globals.css for better contrast

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -55,7 +55,7 @@
 
 :root {
   --background: #000000;
-  --foreground: #f2f2f2;
+  --foreground: #ffffff;
   --primary: #6b1a0b;
   --secondary:#393837; 
   --muted:#3f3535;
